# PhysEng

./: .gitignore  AGENTS.md  Brief.md  CMakeLists.txt  README.md  broad_phase.h  ccd.cpp  ccd.h  constraint_solver.cpp  constraint_solver.h  entity.h  event_system.h  integrator.cpp  math_types.h  narrow_phase.cpp  skeleton.h  sleep_systems.h  trigger_systems.h
.openclaw/: workspace-state.json
PhysEng/apc-core/src/apc_entity/: apc_entity_manager.h  apc_entity_types.h
PhysEng/apc-core/src/apc_sport/: apc_sport_rules.h
PhysEng/apc-core/tests/correctness/: test_sprint22.cpp
apc-core/: ARCHITECTURE.md  CMakeLists.txt  README.md  apc_config.h.in  worklog.md
apc-core/.github/workflows/: determinism.yml
apc-core/cmake/: APCCompilerFlags.cmake  APCDeterminism.cmake
apc-core/docs/: API.md  COLLISION.md  DETERMINISM.md  PHASE9_PLAN.md  RENDER_PIPELINE.md  SHAPE_GUIDE.md  SOLVER.md  TESTING.md
apc-core/scripts/: run_determinism_suite.sh
apc-core/src/apc_ai/: apc_ai_debug_viz.h  apc_ai_decision.h  apc_ai_formation.h  apc_ai_influence_map.h  apc_ai_motor.h  apc_ai_perception.h  apc_ai_steering.h
apc-core/src/apc_app/: apc_application.h  apc_game_loop.h  apc_perf_timer.h  apc_scene_manager.h  apc_sport_config.h  main.cpp  sdl2_main.cpp
apc-core/src/apc_collision/: apc_asset_loader.h  apc_broadphase.h  apc_capsule.h  apc_collision_dispatch.h  apc_convex_asset.h  apc_cylinder.h  apc_epa.h  apc_gjk.h  apc_obb.h  apc_obb_tree.h  apc_plane.h  apc_sphere_sphere.h  apc_support.h
apc-core/src/apc_containers/: apc_flat_map.h  apc_slot_map.h
apc-core/src/apc_entity/: apc_entity_manager.h  apc_entity_types.h
apc-core/src/apc_input/: apc_input_mapping.h  apc_input_state.h  apc_input_types.h
apc-core/src/apc_math/: apc_fixed.h  apc_mat3.cpp  apc_mat3.h  apc_math_common.cpp  apc_math_common.h  apc_quat.cpp  apc_quat.h  apc_scalar.h  apc_vec3.cpp  apc_vec3.h
apc-core/src/apc_platform/: apc_fp_mode.h  apc_fp_mode_arm64.cpp  apc_fp_mode_console.cpp  apc_fp_mode_x64.cpp
apc-core/src/apc_render/: apc_ball_renderer.h  apc_camera_system.h  apc_contact_visualizer.h  apc_debug_draw.h  apc_field_renderer.h  apc_multi_viewport.h  apc_render_bridge.h  apc_render_camera.h  apc_render_context.h  apc_render_types.h  apc_sdl2_renderer.h  apc_skeleton_renderer.h  apc_sport_hud.h  apc_vfx_bridge.h
apc-core/src/apc_sdl2/: apc_sdl2_application.cpp  apc_sdl2_application.h
apc-core/src/apc_skeleton/: apc_blend_system.h  apc_humanoid_builder.h  apc_loop_closure.h  apc_skeletal_fk.h  apc_skeletal_pose.h  apc_skeleton_apc.h  apc_skeleton_collision.h  apc_skeleton_types.h
apc-core/src/apc_solver/: apc_contact_manager.h  apc_rigid_body.h  apc_si_solver_3d.h
apc-core/src/apc_sport/: apc_ball_control.h  apc_ball_physics.h  apc_contact_sport.h  apc_implement.h  apc_pass_kick.h  apc_sport_field.h  apc_sport_physics.h  apc_sport_rules.h
apc-core/src/apc_style/: apc_game_hooks.h  apc_impact_profile.h  apc_material_curve.h  apc_outcome_table.h  apc_stylized_solver.h
apc-core/tests/: CMakeLists.txt
apc-core/tests/correctness/: test_broadphase.cpp  test_dispatch.cpp  test_fixedpoint.cpp  test_gjk_epa.cpp  test_mat3.cpp  test_obb.cpp  test_quat.cpp  test_skeleton_fk.cpp  test_sprint13.cpp  test_sprint15.cpp  test_sprint17.cpp  test_sprint18.cpp  test_sprint19.cpp  test_sprint20.cpp  test_sprint21.cpp  test_sprint22.cpp  test_sprint23.cpp  test_sprint24.cpp  test_sprint25.cpp  test_sprint26.cpp  test_sprint27.cpp  test_sprint28.cpp  test_sprint30.cpp  test_sprint31.cpp  test_sprint32.cpp  test_sprint33.cpp  test_sprint34.cpp  test_sprint4.cpp  test_sprint5.cpp  test_sprint9.cpp  test_vec3.cpp
apc-core/tests/determinism/: det_game_loop.cpp  det_main.cpp  det_mat3_ops.cpp  det_quat_ops.cpp  det_trajectory_sim.cpp  det_vec3_ops.cpp
apc-core/tests/integration/: test_3d_sphere_bounce.cpp  test_ai_steering.cpp  test_apc_pendulum.cpp  test_blend_modes.cpp  test_friction.cpp  test_game_loop.cpp  test_pipeline_sphere_box.cpp  test_solver_v2.cpp  test_sprint10_stylized.cpp  test_sprint11_hooks.cpp  test_sprint12_tackle.cpp  test_sprint14.cpp  test_sprint16.cpp  test_sprint29.cpp  test_sprint6_blend.cpp  test_sprint7_collision.cpp  test_sprint8_humanoid.cpp
apc-core/tools/: ci_report.py  hash_compare.py
apc-core/tools/designer_tool/: apc_raw_parser.h
apc-core/tools/vhacd_cli/: main.cpp
docs/: ImpactLeague_Application_Design.docx
dspe/: CMakeLists.txt  README.md  TASKS.md
dspe/include/: components.h  entity.h  fixed_point.h  materials.h  math_types.h  world.h
dspe/include/dspe/: entity.h  materials.h  math_types.h
dspe/include/dspe/systems/: broad_phase.h  constraint_solver.h
dspe/include/systems/: ccd.h  event_system.h  integrator.h  narrow_phase.h  skeleton.h  sleep_system.h  trigger_system.h
dspe/src/: world.cpp
dspe/src/systems/: broad_phase.cpp  ccd.cpp  constraint_solver.cpp  integrator.cpp  narrow_phase.cpp  skeleton.cpp  sleep_system.cpp  trigger_system.cpp
dspe/tests/: diag.cpp  diag_bugs.cpp  diag_bugs2.cpp  diag_bugs3.cpp  diag_friction.cpp  diag_stability.cpp  test_diag.cpp  test_phase1.cpp
include/dspe/: components.h  fixed_point.h  intergrator.h  materials.h  world.h
include/dspe/systems/: constraint_solver.h  event_system.h  integrator.h  narrow_phase.h
src/: world.cpp
src/systems/: broad_phase.cpp  ccd.cpp  constraint_solver.cpp  integrator.cpp  narrow_phase.cpp  skeleton.cpp  sleep_system.cpp  trigger_system.cpp
tests/: test_phase1.cpp
